# ZetaEngine

./: .gitignore
Iota/: CMakeLists.txt  app.cpp  app.hpp  build_all.sh  build_release.sh  main.cpp
Iota/shaders/: compile_slang.sh  triangle.slang  triangle.vert.spv
Zeta/: CMakeLists.txt  ZetaConfig.cmake.in  events.cpp  render.cpp  time.cpp  window.cpp
Zeta/include/Zeta/: events.hpp  render.hpp  time.hpp  window.hpp
